<resources>
    <string name="app_name">Rulebook</string>
    <string name="app_name_mainactivity">Rulebook: Меню</string>
    <string name="app_name_credits">Rulebook: О Приложении</string>
    <string name="app_name_chooseyourdestiny">Rulebook: Правила</string>
    <string name="app_name_mainrules">Rulebook: Основы</string>
    <string name="app_name_schemesandtables">Rulebook: В схемах и таблицах</string>
    <string name="app_name_lexicon">Rulebook: Лексика</string>
    <string name="app_name_rating">Rulebook: Отзыв</string>
    <string name="app_name_search">Rulebook: Поиск</string>
    <string name="app_name_settings">Rulebook: Настройки</string>
    <string name="app_name_status">Rulebook: Страница состояния</string>
    <string name="app_name_analyze_methods">Rulebook: Виды разборов</string>
    <string name="app_name_dictionaries">Rulebook: Словари</string>
    <string name="app_dev_email" translatable="false">silvenation@gmail.com</string>
    <string name="app_dev_part1" translatable="false">Оценка пользователя--</string>
    <string name="app_dev_part2" translatable="false">/5.0 звёзд</string>
    <string name="app_pixels" translatable="false">pixels</string>
    <string name="app_inches" translatable="false">inches</string>
    <string name="app_dpi" translatable="false">dpi</string>
    <string name="review_device_name" translatable="false">Устройство:</string>
    <string name="review_device_manufacter" translatable="false">Изготовитель:</string>
    <string name="review_device_model" translatable="false">Модель:</string>
    <string name="review_oc_name" translatable="false">Наименование версии ОС:</string>
    <string name="review_device_sdk_version" translatable="false">Версия SDK вашего устройства:</string>
    <string name="review_device_hardware" translatable="false">Железо:</string>
    <string name="review_device_current_dpi_value" translatable="false">DPI:</string>
    <string name="review_device_brand" translatable="false">Бренд:</string>
    <string name="review_device_fingerprint" translatable="false">Биометрия:</string>
    <string name="review_device_serial" translatable="false">Серийный номер:</string>
    <string name="review_device_android_version" translatable="false">Версия Андроида:</string>
    <string name="review_device_screen_resolution" translatable="false">Разрешение экрана:</string>
    <string name="app_status_details_headline">Дополнительная информация</string>
    <string name="app_status_value_null">пусто</string>
    <string name="app_status_reset_all">Сбросить</string>
    <string name="app_status_voicesearch_boolean_state">Голосовой ввод:</string>
    <string name="app_status_anim_boolean_state">Анимации:</string>
    <string name="app_status_page_boolean_state">Страница состояния:</string>
    <string name="app_statusbar_boolean_state">Строка состояния:</string>
    <string name="app_autohidebottomappbar_boolean_state">Контроль всплывающей панели навигации:</string>
    <string name="app_choose_email_client">Выберите почтовый клиент</string>
    <string name="app_status_page">Страница состояния</string>
    <string name="app_status_page_headline">Статус</string>
    <string name="app_launch_basics">Основы</string>
    <string name="app_launch_basics_extended">Орфография и Пунктуация</string>
    <string name="app_launch_lexicon">Лексика</string>
    <string name="app_launch_lexicon_extended">Правила лексики</string>
    <string name="app_launch_debug">Логи</string>
    <string name="app_launch_debug_extended">Логгирование</string>
    <string name="app_launch_schemes_and_tables_extended">В схемах и таблицах</string>
    <string name="app_launch_schemes_and_tables">В таблицах</string>
    <string name="app_launch_analyze">Разборы</string>
    <string name="app_launch_analyze_extended">Виды разборов</string>
    <string name="app_launch_ic_launch_search_rules">Поиск</string>
    <string name="app_launch_ic_launch_search_rules_extended">Быстрый доступ</string>
    <string name="hello_trigger">Нету смысла пересобирать приложение с открытым исходным кодом…</string>
    <string name="app_themepickerpreview_title">Текст</string>
    <string name="voicesearch">Голосовой Ввод</string>
    <string name="disable_voicesearch">Отключить голосовой ввод</string>
    <string name="app_themes_summary">Выберите одну из тем или создайте свою</string>
    <string name="app_themes">Визуальное оформление</string>
    <string name="app_enable_statusbar">Строка состояния</string>
    <string name="app_enable_statusbar_summary">Не скрывать строку состояния</string>
    <string name="app_autohide_bottomappbar">Всплывающая панель навигации</string>
    <string name="app_autohide_bottomappbar_summary">Автоматически скрывать всплывающую панель навигации (При скроллинге вверх и вниз, соответственно)</string>
    <string name="app_prefs_warning_summary">После введённых изменений, для корректного отображения интерфейса может потребоваться перезагрузка.</string>
    <string name="app_edittext_is_empty">Напишите что-нибудь</string>
    <string name="rules">Правила</string>
    <string name="settings">Настройки</string>
    <string name="about_app">О приложении</string>
    <string name="app_exit">Выход</string>
    <string name="app_theme_choose">Тема</string>
    <string name="app_about_extended">Версия: </string>
    <string name="app_about_name">Словарь - Русский Язык</string>
    <string name="search_main">Поиск</string>
    <string name="intent_to_main">Главная</string>
    <string name="search_actionbar">Поиск</string>
    <string name="exit_actionbar">Выход</string>
    <string name="rate_us_headline">Отзыв</string>
    <string name="main_rules">Основные</string>
    <string name="lexicon_rules">Лексика</string>
    <string name="dictionaries">Словари</string>
    <string name="tables_and_schemes_rules">Схемы и таблицы</string>
    <string name="analyze_methods">Виды разборов</string>
    <string name="pref_theme_title">Темы</string>
    <string name="pref_theme_summary">Выберите одну из предустановленных тем</string>
    <string name="pref_primary_color_title">Основной цвет</string>
    <string name="pref_primary_color_summary">Покрывает меньшую часть приложения</string>
    <string name="pref_accent_color_title">Цвет акцента</string>
    <string name="pref_accent_color_summary">Цвет акцента покрывает основную часть приложения</string>
    <string name="pref_background_color_title">Фоновой цвет</string>
    <string name="pref_background_color_summary">Фоновой цвет</string>
    <string name="pref_bottomappbar_item_color_title">Цвет элементов всплывающей панели навигации</string>
    <string name="pref_bottomappbar_item_color_summary">Цвет кнопок панели навигации</string>
    <string name="pref_toast_background_color_title">Фоновой цвет Toast сообщений</string>
    <string name="pref_toast_background_color_summary">Задаёт цвет фона для Toast сообщений</string>
    <string name="pref_toast_accent_color_title">Цвет акцента Toast сообщений</string>
    <string name="pref_toast_accent_color_summary">Цвет акцента покрывает основную часть Toast сообщения</string>
    <string name="pref_button_stroke_color_title">Цвет кнопок</string>
    <string name="pref_button_stroke_color_summary">Кнопки покрываются основным цветом</string>
    <string name="pref_bottomsheetdialog_accent_title">Цвет акцента в меню быстрого доступа</string>
    <string name="pref_bottomsheetdialog_accent_summary">Цвет акцента покрывает основную часть меню быстрого доступа</string>
    <string name="pref_bottomsheetdialog_primary_title">Основной цвет в меню быстрого доступа</string>
    <string name="pref_bottomsheetdialog_primary_summary">Основной цвет покрывает меньшую часть меню быстрого доступа</string>
    <string name="pref_bottomsheetdialog_background_title">Цвет фона в меню быстрого доступа</string>
    <string name="pref_category_appearance">Внешний вид</string>
    <string name="pref_category_appearance_bottomappbar">Всплывающая панель навигации</string>
    <string name="pref_category_appearance_toast">Toast сообщения</string>
    <string name="pref_category_appearance_button">Кнопки</string>
    <string name="pref_category_appearance_bottomsheetdialog">Меню быстрого доступа</string>
    <string name="app_bookmarks">Закладки</string>
    <string name="ortho_3">Употребление прописных букв</string>
    <string name="ortho_17">Правописание частиц</string>
    <string name="punct_10">Знаки препинания в сложноподчиненном предложении</string>
    <string name="punct_14">Знаки препинания при прямой речи</string>
    <string name="ortho_3_10">Прописная буква в начале текста</string>
    <string name="ortho_3_11">Собственные имена лиц и клички животных</string>
    <string name="ortho_3_12">Прилагательные и наречия, образованные от индивидуальных названий</string>
    <string name="ortho_3_13">Географические названия</string>
    <string name="ortho_3_14">Названия государств, административно-территориальных единиц, станций и т. д.</string>
    <string name="ortho_3_15">Астрономические названия</string>
    <string name="ortho_3_16">Названия организаций, органов власти, политических партий, учреждений, предприятий, фирм</string>
    <string name="ortho_3_17">Названия исторических эпох, событий, съездов, геологических периодов</string>
    <string name="ortho_3_18">Названия документов, памятников старины, произведений искусства, органов печати, информационных агентств и др.</string>
    <string name="ortho_3_19">Наименования должностей, званий, титулов</string>
    <string name="ortho_3_20">Названия орденов, медалей, знаков отличия, премий</string>
    <string name="ortho_3_21">Названия, связанные с религией</string>
    <string name="ortho_3_22">Названия пород животных, видов и сортов растений</string>
    <string name="ortho_3_23">Названия вин, минеральных вод, кондитерских изделий и т. д.</string>
    <string name="ortho_3_24">Названия марок машин и механизмов</string>
    <string name="ortho_3_25">Сложносокращенные слова и аббревиатуры</string>
    <string name="ortho_3_26">Условные имена собственные</string>
    <string name="ortho_17_55">Правописание неотрицательных частиц</string>
    <string name="ortho_17_56">Частица не с существительными</string>
    <string name="ortho_17_57">Частица не с прилагательными</string>
    <string name="ortho_17_58">Частица не с числительными и местоимениями</string>
    <string name="ortho_17_59">Частица не с глаголами</string>
    <string name="ortho_17_60">Частица не с причастиями</string>
    <string name="ortho_17_61">Частица не с наречиями</string>
    <string name="ortho_17_62">Правописание частицы ни</string>
    <string name="punct_10_33">Запятая между главной и придаточной частями сложноподчиненного предложения</string>
    <string name="punct_10_34">Запятая при сложных подчинительных союзах</string>
    <string name="punct_10_35">Знаки препинания в сложноподчиненном предложении с несколькими придаточными</string>
    <string name="punct_10_36">Запятая на стыке двух союзов</string>
    <string name="punct_10_37">Точка с запятой в сложноподчиненном предложении</string>
    <string name="punct_10_38">Тире в сложноподчиненном предложении</string>
    <string name="punct_10_39">Двоеточие в сложноподчиненном предложении</string>
    <string name="punct_10_40">Запятая и тире в сложноподчиненном предложении</string>
    <string name="punct_14_47">Оформление прямой речи</string>
    <string name="punct_14_48">Прямая речь после слов автора</string>
    <string name="punct_14_49">Прямая речь перед словами автора</string>
    <string name="punct_14_50">Слова автора внутри прямой речи</string>
    <string name="punct_14_51">Прямая речь внутри слов автора</string>
    <string name="punct_14_52">Знаки препинания при диалоге</string>
    <string name="punct_14_53">Абзацы при прямой речи</string>
    <string name="punct_14_54">Пунктуационное и графическое оформление текста в пьесах</string>
</resources>