<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@id/orthographyButton2_container"
    android:orientation="vertical">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ortho_3"
        android:id="@+id/orthographyButton3" />

    <LinearLayout
        android:id="@+id/orthographyButton3_container2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/activity_space_height"/>

        <Button
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/ortho_3_10"
            android:id="@+id/ortho3mainButton1"
            style="@style/RulebookButtonTop"/>

        <Button
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/ortho_3_11"
            android:id="@+id/ortho3mainButton2" />

        <Button
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/ortho_3_12"
            android:id="@+id/ortho3mainButton3" />

        <Button
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/ortho_3_13"
            android:id="@+id/ortho3mainButton4" />

        <Button
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/ortho_3_14"
            android:id="@+id/ortho3mainButton5" />

        <Button
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/ortho_3_15"
            android:id="@+id/ortho3mainButton6" />

        <Button
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/ortho_3_16"
            android:id="@+id/ortho3mainButton7" />

        <Button
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/ortho_3_17"
            android:id="@+id/ortho3mainButton8" />

        <Button
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/ortho_3_18"
            android:id="@+id/ortho3mainButton9" />

        <Button
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/ortho_3_19"
            android:id="@+id/ortho3mainButton10" />

        <Button
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/ortho_3_20"
            android:id="@+id/ortho3mainButton11" />

        <Button
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/ortho_3_21"
            android:id="@+id/ortho3mainButton12" />

        <Button
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/ortho_3_22"
            android:id="@+id/ortho3mainButton13" />

        <Button
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/ortho_3_23"
            android:id="@+id/ortho3mainButton14" />

        <Button
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/ortho_3_24"
            android:id="@+id/ortho3mainButton15"/>

        <Button
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/ortho_3_25"
            android:id="@+id/ortho3mainButton16" />

        <Button
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/ortho_3_26"
            style="@style/RulebookButtonBottom"
            android:id="@+id/ortho3mainButton17"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/activity_space_height"/>

    </LinearLayout>
</LinearLayout>
