<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@id/punctuationButton9_container"
    android:orientation="vertical">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/punct_10"
        android:id="@+id/punctuationButton10"/>

    <LinearLayout
        android:id="@+id/punctuationButton10_container2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/activity_space_height"/>

        <Button
            android:id="@+id/punct10mainButton1"
            style="@style/RulebookButtonTop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/punct_10_33" />

        <Button
            android:id="@+id/punct10mainButton2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/punct_10_34" />

        <Button
            android:id="@+id/punct10mainButton3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/punct_10_35" />

        <Button
            android:id="@+id/punct10mainButton4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/punct_10_36" />

        <Button
            android:id="@+id/punct10mainButton5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/punct_10_37" />

        <Button
            android:id="@+id/punct10mainButton6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/punct_10_38" />

        <Button
            android:id="@+id/punct10mainButton7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/punct_10_39" />

        <Button
            android:id="@+id/punct10mainButton8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/punct_10_40"
            style="@style/RulebookButtonBottom"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/activity_space_height"/>

    </LinearLayout>
</LinearLayout>