<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@id/punctuationButton13"
    android:orientation="vertical">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/punct_14"
        android:id="@+id/punctuationButton14"/>

    <LinearLayout
        android:id="@+id/punctuationButton14_sub_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/activity_space_height"/>

        <Button
            android:id="@+id/punct14mainButton1"
            style="@style/RulebookButtonEveryThemeTop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/punct_14_47" />

        <Button
            android:id="@+id/punct14mainButton2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/punct_14_48" />

        <Button
            android:id="@+id/punct14mainButton3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/punct_14_49" />

        <Button
            android:id="@+id/punct14mainButton4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/punct_14_50" />

        <Button
            android:id="@+id/punct14mainButton5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/punct_14_51" />

        <Button
            android:id="@+id/punct14mainButton6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/punct_14_52" />

        <Button
            android:id="@+id/punct14mainButton7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/punct_14_53" />

        <Button
            android:id="@+id/punct14mainButton8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/punct_14_54"
            style="@style/RulebookButtonEveryThemeBottom"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/activity_space_height"/>

    </LinearLayout>
</LinearLayout>