<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="none">
        <item
            android:id="@+id/bottomsheetdialog_betweenactivities_mainrules"
            android:icon="@drawable/ic_view_list_black"
            android:title="@string/rules" />

        <item
            android:id="@+id/bottomsheetdialog_betweenactivities_dictionaries"
            android:icon="@drawable/ic_view_list_black"
            android:title="@string/dictionaries" />

        <item
            android:id="@+id/bottomsheetdialog_betweenactivities_about"
            android:icon="@drawable/ic_about_outline_black"
            android:title="@string/about_app" />

        <item
            android:id="@+id/bottomsheetdialog_betweenactivities_settings"
            android:icon="@drawable/ic_settings_black"
            android:title="@string/settings" />

        <item
            android:id="@+id/bottomsheetdialog_betweenactivities_exit"
            android:icon="@drawable/ic_close_black"
            android:title="@string/app_exit" />

    </group>
</menu>